--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.57"
 winit = "0.26.1"
+log = "0.4.16"
+clap = "3.1.12"
+env_logger = "0.9.0"
+gltf = "1.0.0"
+ash = "0.36.0"
+ash-window = "0.9.1"
+maplit = "1.0.2"
+gpu-allocator = "0.17.0"
 
 [build-dependencies]
 anyhow = "1.0.57"
