--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,10 @@
                     "name": "VK_INSTANCE_LAYERS",
                     "value": "VK_LAYER_KHRONOS_validation"
                 },
+                // {
+                //     "name": "VK_INSTANCE_LAYERS",
+                //     "value": "VK_LAYER_KHRONOS_validation;VK_LAYER_LUNARG_api_dump"
+                // },
             ],
         }
     ]
