--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ ash-window = "0.9.1"
 maplit = "1.0.2"
 gpu-allocator = "0.17.0"
 cstr = "0.2.10"
+arr_macro = "0.1.3"
 
 [build-dependencies]
 anyhow = "1.0.57"
